Fix Overflow in getFullResource & Fix Viewing only if validated

--- a/resources/assets/sass/front/resources.scss
+++ b/resources/assets/sass/front/resources.scss
@@ -71,6 +71,7 @@ label {
     padding: 0.25rem;
     background-color: #ffffff;
     min-height:100vh;
+    overflow: auto;
 }
 
 .card-footer {
